[package]
authors = ["Zhenyuan Zhang <cryscan@umich.edu>"]
categories = ["science", "text-processing"]
description = "An implementation of the RWKV language model in pure WebGPU."
edition = "2021"
exclude = ["assets/", "crates/", "screenshots/"]
homepage = "https://github.com/cryscan/web-rwkv"
keywords = ["deep-learning", "language", "model", "rwkv"]
license = "MIT OR Apache-2.0"
name = "web-rwkv"
repository = "https://github.com/cryscan/web-rwkv"
version = "0.8.4"

[dependencies]
ahash = "0.8"
anyhow = "1.0"
bytemuck = { version = "1.13", features = ["extern_crate_alloc"] }
derive-getters = "0.3"
document-features = "0.2.8"
flume = { version = "0.11.0" }
futures = "0.3"
gpp = "0.6.2"
half = { version = "2.2", features = ["bytemuck", "serde"] }
instant = { version = "0.1", features = ["inaccurate", "wasm-bindgen"] }
itertools = "0.12"
log = "0.4"
regex = "1.10"
safetensors = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_bytes = "0.11.14"
serde_json = "1.0"
thiserror = "1.0"
trait-variant = "0.1"
uid = "0.1"
wasm-bindgen = "0.2"
wgpu = "0.20.0"

[dependencies.web-rwkv-derive]
path = "crates/web-rwkv-derive"
version = "0.2.4"

[dependencies.tokio]
default-features = false
features = ["macros", "rt", "sync", "time"]
version = "1.37"

[dev-dependencies]
cbor4ii = { version = "0.3.2", features = ["half-f16", "serde1"] }
fastrand = "2.0"
memmap2 = "0.9"
tokio = { version = "1.37", features = ["full"] }
# wgpu-profiler = "0.14.1"
clap = { version = "4.3", features = ["derive"] }
crossterm = "0.27"
dialoguer = "0.11.0"
pollster = "0.3.0"
ratatui = { version = "0.26", features = ["all-widgets"] }
simple_logger = { version = "5.0.0", features = ["stderr"] }

[features]
default = ["runtime", "subgroup-ops", "tokio-multi-thread", "vanilla"]
native = ["runtime", "subgroup-ops", "tokio-multi-thread"]
web = ["vanilla"]

## Enables async GPU command building. Can be faster on some Xeon cpus but slower on others.
async-build = []
## Enables `runtime` API, which essentially doubles the inference speed comparing to the old API.
runtime = []
## Enables subgroup operations in the kernels. Accelerates the inference on some device.
subgroup-ops = []
## Enables tokio's multi-threaded runtime. Doesn't work on web platforms.
tokio-multi-thread = ["tokio/rt-multi-thread"]
## Enables `vanilla` API.
vanilla = []

[[example]]
name = "gen"
required-features = ["vanilla"]

[[example]]
name = "chat"
required-features = ["vanilla"]

[[example]]
name = "batch"
required-features = ["vanilla"]

[[example]]
name = "inspector"
required-features = ["vanilla"]

[[example]]
name = "serialization"
required-features = ["vanilla"]

[[example]]
name = "rt-gen"
required-features = ["runtime"]

[[example]]
name = "rt-chat"
required-features = ["runtime"]

[[example]]
name = "rt-batch"
required-features = ["runtime"]
