[workspace.package]
authors = ["Zhenyuan Zhang <cryscan@umich.edu>"]
categories = ["science", "text-processing"]
description = "An implementation of the RWKV language model in pure WebGPU."
edition = "2021"
exclude = ["assets/", "screenshots/"]
homepage = "https://github.com/cryscan/web-rwkv"
keywords = ["deep-learning", "language", "model", "rwkv"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cryscan/web-rwkv"
rust-version = "1.83.0"
version = "0.10.12"

[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
exclude = ["assets/", "crates/", "screenshots/"]
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "web-rwkv"
repository.workspace = true
version.workspace = true

[dependencies]
bytemuck = { version = "1.21", features = ["extern_crate_alloc"] }
casey = "0.4.2"
derive-getters = "0.5"
derive_more = { version = "2.0.1", features = [
    "deref",
    "deref_mut",
    "display",
    "from",
    "into",
] }
document-features = "0.2.8"
embed-doc-image = "0.1.4"
flume = "0.11"
futures = "0.3"
gpp = "0.6.2"
half = { version = "2.2", features = ["bytemuck", "serde"] }
instant = { version = "0.1", features = ["inaccurate", "wasm-bindgen"] }
itertools = "0.14"
log = "0.4"
regex = "1.11"
rustc-hash = "2.1"
safetensors = "0.5"
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_bytes = "0.11.14"
serde_json = "1.0"
serde_variant = "0.1.3"
statrs = "0.18.0"
thiserror = "2.0"
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }
tracing-tracy = { version = "0.11.4", optional = true }
trait-variant = "0.1"
uid = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = "25.0"

[dependencies.web-rwkv-derive]
path = "crates/web-rwkv-derive"
version = "0.10"

[dependencies.tokio]
default-features = false
features = ["macros", "rt", "sync", "time"]
version = "1.45"

[dev-dependencies]
anyhow = "1.0"
cbor4ii = { version = "1.0.0", features = ["half-f16", "serde1"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dialoguer = "0.11.0"
fastrand = "2.3"
memmap2 = "0.9"
ratatui = { version = "0.29", features = ["all-widgets"] }
simple_logger = { version = "5.0.0", features = ["stderr"] }
tokio = { version = "1.45", features = ["full"] }

[features]
default = ["native"]

## Enables on native platforms.
native = ["subgroup-ops", "tokio/rt-multi-thread"]
## Enables only for the WASM platform.
web = []
## Enables subgroup operations in the kernels. Accelerates the inference on some device.
subgroup-ops = []
## Enables performance tracing.
trace = ["tracing", "tracing-subscriber", "tracing-tracy"]
## Enables backtrace for errors.
backtrace = []
