[package]
name = "web-rwkv-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
safetensors = "0.3.1"
half = { version = "2.2", features = ["bytemuck"] }
memmap2 = "0.7"
bytemuck = { version = "1.13", features = ["extern_crate_alloc"] }
anyhow = "1"
clap = { version = "4.3", features = ["derive"] }

[dependencies.repugnant-pickle]
git = "https://github.com/KerfuffleV2/repugnant-pickle"
features = ["torch"]
